# PanpanGIS

./: .gitignore  README.md
doc/Logo/: logo.tex
doc/PanpanGIS/: panpangis.cls  panpangis.tex
doc/PanpanGIS/01preface/: preface.tex
doc/PanpanGIS/02structure/: system_structure.eps  system_structure.graphml
doc/PanpanGIS/03install/: install.tex  pg_pack.sh  postgis_config.h.in
doc/PanpanGIS/PostGIS_PostgreSQL_Extension/: postgis_postgresql_extension.tex
doc/PanpanGIS/Symbol_extension/: Symbol.tex  symbol_class_structure.eps  symbol_class_structure.graphml
src/Client/PanMapSymbolEditor/: CMakeLists.txt  Main.qml  main.cpp
src/Client/PanpanGIS/: CMakeLists.txt  PanAjax.h  main.cpp
src/Client/PanpanGIS/base/: qmldir
src/Client/PanpanGIS/control/: CMakeLists.txt  PanAwesomeIcons.qml  PanButton.qml  PanFonts.qml  PanGisIcons.qml  PanLabel.qml  PanMaterialIcons.qml  PanOkCancelButtons.qml  PanStyles.qml  PanTextField.qml
src/Client/PanpanGIS/map/: CMakeLists.txt  Main.qml  PanAccountCreatePanel.qml  PanAjax.cpp  PanAjax.h  PanApplication.qml  PanApplicationWindow.qml  PanBorder.qml  PanBusyIndicator.qml  PanCatalogNode.cpp  PanCatalogNode.h  PanCatalogTree.qml  PanCatalogTreeMenu.qml  PanCatalogWindow.qml  PanConnector.js  PanConnector.qml  PanDesktop.qml  PanDialog.qml  PanFormWindow.qml  PanIdentifyCode.qml  PanInputManager.cpp  PanInputManager.h  PanInputWindow.qml  PanJsonModel.cpp  PanJsonModel.h  PanLogWindow.qml  PanLoginPanel.qml  PanLoginWindow.qml  PanMessageDialog.qml  PanNotify.qml  PanPanel.qml  PanProgress.qml  PanRegisterWindow.qml  PanSpatialTableTableView.qml  PanStandardButtons.qml  PanSymbolEditorWindow.qml  PanTableModel.cpp  PanTableView.qml  PanTextField.qml  PanUserWindow.qml  (+3 more)
src/Client/PanpanGIS/map/html/: index.html  testinput.html
src/Client/PanpanGIS_OLD/base/: CMakeLists.txt
src/Client/PanpanGIS_OLD/control/: CMakeLists.txt  PanAwesomeIcons.qml  PanButton.qml  PanButtonOld.qml  PanMaterialIcons2.qml  qmldir
src/Client/PanpanGIS_OLD/control/src/: MapCanvas.h
src/Client/PanpanGIS_OLD/map/: Main.qml  PanAccountCreatePanel.qml  PanAjax.cpp  PanBorder.qml  PanButton2.qml  PanCatalogTree.qml  PanCheckBox.qml  PanConnector.qml  PanDesktop.qml  PanFormWindow.qml  PanHeader.qml  PanJsonModel.cpp  PanJsonModel.h  PanLogWindow.qml  PanLoginWindow.qml  PanMapEditorWindow.qml  PanMenu.qml  PanNotify.qml  PanPanel.qml  PanSpatialTableWindow.qml  PanTableModel.h  PanTableView_copy.qml  PanUserWindow.qml  PanVerifyCode.qml  PanWindow.qml  main.cpp
src/Database/: current.sql  init_pandb.sh  miscellaneous.sql  test.sh  test.sql  user.sql  uuid.sql
src/Database/gis/: catalog.sql  create_script.sh  install.sql  service.sql
src/Database/master/: configuration.sql  create_script.sh  current.sql  init_pandb.sh  install.sql  miscellaneous.sql  pan_master_db.sql  server.sql  service.sql  test.sh  user.sql
src/Database/master/request/: identifycode.json  login.json  register.json
src/Database/shared/: configuration.sql  miscellaneous.sql  server.sql  service.sql  tables.sql  user.sql
src/MasterService/: DBConf.php  Server.php  Service.php  UserServer.php
src/MasterService/nbproject/: project.xml
src/Service/: DBConf.php  PanGISService.php  PanMasterService.php
src/Service/nbproject/: project.xml
src/Service/nbproject/private/: private.properties  private.xml
src/sqlcarto/: Makefile  email.c  email.sql  install.sh  patch.sh  sqlcarto--1.0.sql  sqlcarto.h  sqlcarto.sql  test.sh  test.sql
src/sqlcarto.bak/: Makefile  Makefile.in  Makefile.standalone  china_proj.sql  create_postgis_lib.sh  create_postgis_lib_msys_ucrt.sh  email.sql  export_static_archive_for_dll.sh  install.sh  sqlcarto.control  sqlcarto.h  sqlcarto.sql  test.sh  test.sql
src/sqlcarto/extensions/postgis_sqlcarto/: postgis_sqlcarto.control.in
src/sqlcarto/skia_c/: Makefile  sk_capi.cpp  sk_capi.h  sk_capi.h.gch
src/sqlcarto/sqlcarto/: Makefile.in  china_trans.h  combine_sql.sh  sqlcarto.h  sqlcarto.sql.in  symbol.c  symbol.h  symbol_inout.c  symbol_inout.h
src/sqlcarto/sqlcarto/sql/: china_proj.sql  symbol.sql
src/sqlcarto/sqlcarto/support/: CMakeLists.txt  dllexport.h
src/sqlcarto/sqlcarto/support/skia_c/: CMakeLists.txt  sk_capi.h
src/sqlcarto/sqlcarto/support/symbol/: CMakeLists.txt  SymArc.cpp  SymArc.h  SymChord.cpp  SymChord.h  SymCircle.cpp  SymCircle.h  SymColor.cpp  SymColor.h  SymEllipse.cpp  SymEllipse.h  SymFill.cpp  SymFill.h  SymFillSolid.cpp  SymFillSolid.h  SymLineString.cpp  SymLineString.h  SymPie.cpp  SymPie.h  SymPoint.cpp  SymPoint.h  SymPolygon.cpp  SymPolygon.h  SymRegularPolygon.cpp  SymRegularPolygon.h  SymShape.cpp  SymShape.h  SymShapeWithStroke.cpp  SymShapeWithStroke.h  SymShapeWithStrokeAndFill.cpp  SymShapeWithStrokeAndFill.h  SymStroke.cpp  SymStroke.h  SymSystemFill.cpp  SymSystemFill.h  SymSystemFillShape.h  SymSystemLine.cpp  SymSystemLine.h  Symbol.cpp  Symbol.h  (+3 more)
src/sqlcarto/sqlcarto/support/symbol/c_wrapper/: CMakeLists.txt  symbol_c.cpp  symbol_c.h
src/sqlcarto/sqlcarto/support/symbol/cpp/: CMakeLists.txt  SymArc.cpp  SymArc.h  SymCanvas.cpp  SymCanvas.h  SymChord.cpp  SymChord.h  SymCircle.cpp  SymCircle.h  SymColor.cpp  SymColor.h  SymEllipse.cpp  SymEllipse.h  SymFill.cpp  SymFill.h  SymFillSolid.cpp  SymFillSolid.h  SymLineString.cpp  SymLineString.h  SymPie.cpp  SymPie.h  SymPoint.cpp  SymPoint.h  SymPolygon.cpp  SymPolygon.h  SymRect.cpp  SymRect.h  SymRegularPolygon.cpp  SymRegularPolygon.h  SymShape.cpp  SymShape.h  SymShapeWithStroke.cpp  SymShapeWithStroke.h  SymShapeWithStrokeAndFill.cpp  SymShapeWithStrokeAndFill.h  SymStar.cpp  SymStar.h  SymStroke.cpp  SymStroke.h  SymSystemFill.cpp  (+7 more)
test/PanpanGIS/control/src/: MapCanvas.cpp
