cmake_minimum_required(VERSION 3.16)

project(PanpanGIS VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Qml Gui QuickControls2 Network)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(PanpanGIS
    main.cpp
)


qt_add_qml_module(PanpanGIS
    URI PanpanGIS
    VERSION 1.0
    QML_FILES
        Main.qml
    SOURCES
        PanAjax.h
        PanAjax.cpp
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(PanpanGIS PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appPanpanGIS
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(PanpanGIS
    PRIVATE Qt6::Quick Qt6::Gui Qt6::QuickControls2 Qt6::Qml Qt6::Network
)

include(GNUInstallDirs)
install(TARGETS PanpanGIS
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
